# epick-lite

./: Cargo.toml  README.md
.github/actions/test/: action.yml
.github/workflows/: build_pr.yml  build_push.yml  release.yml
src/: context.rs  error.rs  keybinding.rs  lib.rs  main.rs  render.rs  screen_size.rs  settings.rs  zoom_picker.rs
src/app/: mod.rs  palette.rs  scheme.rs  sidepanel.rs
src/app/window/: custom_formats.rs  export.rs  help.rs  mod.rs  palette_formats.rs  settings.rs
src/color/: chromatic_adaptation.rs  cmyk.rs  format.rs  gradient.rs  hsl.rs  hsv.rs  illuminant.rs  lab.rs  luv.rs  mod.rs  palette.rs  palettes.rs  rgb.rs  working_space.rs  xyz.rs
src/color_picker/: mod.rs
src/display_picker/: mod.rs  windows.rs  x11.rs
src/math/: matrix3x3.rs
src/ui/: colorbox.rs  layout.rs  mod.rs  slider_1d.rs  slider_2d.rs
