[package]
name = "epick-lite"
version = "0.9.0"
description = "Fork of epick with a more \"lite\" ui and feature set"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>", "github.com/crumblingstatue"]
edition = "2021"

[[bin]]
name = "epick"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
egui = { version = "0.27.2" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "5"
nom = "7"
image = "0.25.1"
once_cell = "1"
native-dialog = "0.6"
arboard = "2"

#pretty_env_logger = "0.4"
#tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
#tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["image", "cursor", "resource_manager"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = {version = "0.2", features = ["exception"]}
core-graphics = {version = "0.22"}

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
strip = true
