[package]
name = "epick-lite"
version = "0.9.0"
description = "Color picker for Linux. Fork of epick."
authors = ["Wojciech Kępka <wojciech@wkepka.dev>", "github.com/crumblingstatue"]
edition = "2024"

[[bin]]
name = "epick"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31.0", default-features=false, features = ["glow", "x11", "wayland", "persistence"] }
egui = { version = "0.31.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6"
nom = "7"
image = "0.25.1"
once_cell = "1"
arboard = "3.3.2"
x11rb = { version = "0.13", features = ["image", "cursor", "resource_manager"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
strip = true
